fixed header at top on tablet & desktop

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -3,6 +3,7 @@
   max-width: 1150px
   margin-left: auto
   margin-right: auto
+  margin-top: 100px
 
 article
   border-bottom: 1px dashed grey
