--- a/source/css/_partial/rwd.styl
+++ b/source/css/_partial/rwd.styl
@@ -1,7 +1,20 @@
+// fixed max width
+@media (min-width: 1601px)
+  #container
+    width: 1150px
+
+  #header
+    width: 1150px
+    margin-left: -575px
+
 // tablet
 @media (min-width:768px) and (max-width:1040px)
   #container
     width: 700px
+
+  #header
+    width: 700px
+    margin-left: -350px
 
   #main-page
   #main
@@ -36,6 +49,7 @@
   .meta-separator
     display: none
   #container
+    margin-top: 0
     width: 93.75%
     word-wrap: break-word
 
@@ -77,6 +91,7 @@
     display: none !important
 
   #header
+    width: 100%
     margin: 0.75em 0 2em 0
     padding-bottom:1em
     text-align: center
